Change title and greeting in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¡Yanetzy, mi San Valentín!</title>
+    <title>¡Jessi, mi San Valentín!</title>
     <style>
         /* Fondo rosado y estilos generales */
         body {
@@ -132,7 +132,7 @@
     <!-- Imagen del Gato con Botas -->
     <img src="https://media.giphy.com/media/Q6WPVzFU8LcBWWgQE1/giphy.gif" alt="Gato con Botas ojitos dulces" class="gato-botas">
 
-    <h1>Yanetzy, ¿puedo ser tu San Valentín?</h1>
+    <h1>Jessi, ¿puedo ser tu San Valentín?</h1>
 
     <!-- Botones reorganizados -->
     <div class="botones">
@@ -177,3 +177,4 @@
     </script>
 </body>
 </html>
+
